# QuickSend

./: .lefthook.yml  AI_CONTEXT.md  Makefile  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  playwright.visual.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  publish.yml
scripts/: desktop_e2e_smoke.sh  packaged_e2e_theme_persist.mjs  packaged_e2e_transfer.mjs
src/: App.css  App.tsx  hooks.ts  index.css  main.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: iroh.rs  lib.rs  main.rs  state.rs
src-tauri/src/api/: dto.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/services/: mod.rs  prepare.rs  settings.rs  transfer.rs
src-tauri/src/utils/: files.rs  ids.rs  mime.rs  mod.rs  paths.rs
src-tauri/tests/: multi_instance.rs
src/components/: PackageFileDropzone.tsx  PackageFilesTable.tsx  PackageHeaderActions.tsx  PackagePageContent.test.tsx  PackagePageContent.tsx  PackagePageHeader.tsx  ReceivePackageCard.tsx  ReceiveStatusCard.tsx  ReceiveTransferProgress.tsx  SendPackageContent.test.tsx  SendPackageContent.tsx  TransferStatusCard.tsx
src/components/ui/: button.tsx  field.tsx  progress.tsx  select.tsx  slider.tsx  tooltip.tsx
src/features/receiver/: receiver-slide.ts
src/features/sender/: sender-slide.ts
src/hooks/: useAppShellPanels.ts  useAutoDownloadOnIdleReceive.ts  useFileSelectionDialog.ts  usePackageActions.ts  usePackageRows.ts  useReceiveClipboardTicketSync.ts  useReceiveTransferStats.ts  useRowActionMenu.ts  useSendPrepareStats.ts  useWebviewFileDrop.ts
src/layout/: AboutDrawer.tsx  AppShell.tsx  SettingsModal.tsx  TopNav.tsx
src/lib/: formatters.ts  inspectFiles.ts  ticketLink.ts
src/pages/: PackagePage.tsx  ReceiveDownloadFlow.test.tsx  ReceivePackagePage.tsx  ReceivePage.test.tsx  ReceivePage.tsx  SendPackagePage.tsx  SendPage.tsx  SendPage.visual.test.tsx
src/pages/__snapshots__/: SendPage.visual.test.tsx.snap
src/store/: appStore.test.ts  appStore.ts
src/test/helpers/: paths.ts  receivePageHarness.tsx  store.ts  tauri.ts
src/test/visual/: package-states.html  package-states.tsx
src/types/: domain.ts
tests/visual/: receive-flow.click.spec.ts  receive-package-states.spec.ts
